linda's second round of edits

--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -80,7 +80,7 @@ prstab,
 \newcolumntype{D}{ >{\centering\arraybackslash} m{3cm} }
 
 \newcommand{\nrnote}[1]{\textsf{{\color{violet}{ NN note:}   #1 }}}
-
+\newcommand{\lsedit}[1]{\textsf{{\color{violet}{ ls note:}   #1 }}}
 \begin{document}
 
 
@@ -841,7 +841,7 @@ opt: OPTIMIZE, OBJECTIVES=objs, DVARS=dvars, CONSTRAINTS=constrs;
 
 
 
-\input{theor-experiment} %periment}
+\input{theor-experiment} 
 
 
 
