removing AiF for Christof, and more linda edits

--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -504,8 +504,9 @@ and four quadrupole strengths (KQ1-KQ2). The objectives include
 beam size (transverse and longitudinal), transverse momentum, and energy spread as
 defined in Eqs. (\ref{eq:awa:p1}) to (\ref{eq:awa:p4}). 
 The location at the entrance of the kicker is $s_1=16.45$~meters, 
-and the location of interest for objectives is $s_3=19.4$~meters. 
-\lsedit{Do you mean `the objectives are optimized at location s3' in the above sentence? `location of interest for objectives' is not clear.  Also, I think your later text `This is the entrance to the fifth quad in the beam line. This location is where the beam should be captured and focused through subsequent elements.' should be moved here.}
+and the objectives are optimized at location $s_3=19.4$~meters. 
+This is the entrance to the fifth quad in the beam line. 
+This location is where the beam should be captured and focused through subsequent elements.
 
 
 \subsubsection{AWA Optimization Results}
@@ -530,13 +531,7 @@ and the minimum number individuals in later generations was fixed at 328.
 These numbers were in part based on the architecture of the KNL's. 
 Since each simulation takes 8 cores, and there are 64 cores per KNL node, 
 we wanted a large population size that would fit evenly on these resources. 
-
 Again, the location of optimization is $s_3=19.4$ [m]. 
-This is the entrance to the fifth quad in the beam line. 
-This location is where the beam should be captured and focused through subsequent elements.
-\lsedit{as previously mentioned, move above two sentences.}
-After collection of the data, Pareto fronts comparing the objectives were plotted, 
-see Figs.~\ref{fig:pareto1} and \ref{fig:pareto2}.
 
 \begin{figure}
 	\includegraphics[width=0.5\textwidth]{../pareto_stat_plots/xy_vs_pxy_pareto_front_quads_before_Q5}
