first round of edits with Dr. Neveu

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,18 @@
+@article{PETSeq,
+    title = {Design and testing of a 7.8 GHz power extractor using a cylindrical dielectric-loaded waveguide},
+    author = {Gao, F. and Conde, M. E. and Gai, W. and Jing, C. and Konecny, R. and Liu, W. and Power, J. G. and Wong, T. and Yusof, Z.},
+    journal = {Phys. Rev. ST Accel. Beams},
+    volume = {11},
+    issue = {4},
+    pages = {041301},
+    numpages = {10},
+    year = {2008},
+    month = {Apr},
+    publisher = {American Physical Society},
+    doi = {10.1103/PhysRevSTAB.11.041301},
+    url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.11.041301}
+}
+
 @mastersthesis{fors:13,
   author = {Andrew Foster},
   title = {A Homotopic Method for Large-Scale Multi-Objective Optimization},
