changes to ch 1 and lit

--- a/paper/figures/opt-framework_code.tex
+++ b/paper/figures/opt-framework_code.tex
@@ -41,9 +41,9 @@
 	
 	
 	\path (pilot.north)+(0.7,1.5) node (opal) [draw, text centered,
-	text width=6em, fill=orange, fill opacity=0.1, minimum height=2em,
+	text width=8em, fill=orange, fill opacity=0.1, minimum height=2em,
 	rounded corners, very thick, draw=orange, text opacity=1.0]
-	{\textsc{Simulation}};
+	{\textsc{Beam Dynamics}};
 	
 	\path [->, very thick] (pilot.north) edge [bend left] (opal.south);	
 	\path[<-, very thick] (optimizer.east) edge [bend right] (sims.east);
