--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -36,13 +36,15 @@
 }
 
 @techreport{opal,
-title = "{The OPAL (Object Oriented Parallel Accelerator Library)
-          Framework }",
-author = "A. Adelmann and Ch. Kraus and Y. Ineichen and S. Russell
-          and Yuanjie Bi and J. Yang",
-institution = "Paul Scherrer Institut",
-number = "PSI-PR-08-02",
-year ={2008}
+title = {The OPAL (Object Oriented Parallel Accelerator Library) Framework},
+author = {Andreas Adelmann, Christian Baumgarten, Matthias Frey, Achim Gsell, Valeria Rizzoglio,
+Jochem Snuverink (PSI) and Christof Metzger-Kraus and Yves Ineichen and
+Steve Russell (LANL) and Chuan Wang (CIAE) and
+Suzanne Sheehy and Chris Rogers (RAL) and
+Daniel Winklehner (MIT)},
+institution = {Paul Scherrer Institut},
+number = {PSI-PR-08-02},
+year = {(2008-2018)}
 }
 
 @techreport{ippl,
