--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -514,7 +514,8 @@ We divide the framework in three exchangeable components, as shown in
     three roles.
   The dashed cyan path describes a request (job $j_1$) sent from $O_i$ to the
   \textsc{Pilot} being handled by $W_j$. Subsequently the result $r_k$ is
-  returned to the requesting \textsc{Optimizer} ($O_i$).}
+  returned to the requesting \textsc{Optimizer} ($O_i$). The work $W_j$ are beam dynamics 
+  simulation within OPAL.}
   \label{fig:opt-framework-layout}
 \end{figure}
 
@@ -612,9 +613,11 @@ A special set of communicator groups serves as communication channels to the
 
 \subsection{Implementing a Forward Solver}
 
-In most cases \textsc{Simulation} implementations are simple wrappers to run
+In most cases forward solver implementations are simple wrappers to run
   an existing ``external'' simulation code using a set of design variables as
-  input.
+  input. In case of the OPAL integration, basically the \texttt{main} function is
+  playing the role of the ``forward solver''. Underlying the general nature of our approach, 
+  in a similar project, we use the described methods for cavity shape optimisation based on \cite{ARBENZ2008381}. 
 As for the \textsc{Optimizer} component there exists a base class, labeled
   \texttt{Simulation} as common basis for all \textsc{Simulation}
   implementations.
